--- a/locales/gtg.pot
+++ b/locales/gtg.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-03 20:28+0400\n"
+"POT-Creation-Date: 2009-04-03 20:19+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,71 +16,213 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: GTG/taskeditor/editor.py:212
-msgid "Due tomorrow !"
+#: GTG/core/firstrun_tasks.py:6
+msgid "Getting started with GTG"
 msgstr ""
 
-#: GTG/taskeditor/editor.py:214
-#, python-format
-msgid "%s days left"
+#: GTG/core/firstrun_tasks.py:7
+msgid "Welcome in Getting Things Gnome!, your new task manager."
 msgstr ""
 
-#: GTG/taskeditor/editor.py:216
-msgid "Due today !"
+#: GTG/core/firstrun_tasks.py:9
+msgid ""
+"In GTG, everything is a task. From building a bridge over the Pacific Ocean "
+"to changing a light bulb or organizing a party. When you edit a task, it is "
+"automatically saved."
 msgstr ""
 
-#: GTG/taskeditor/editor.py:218
-msgid "Due for yesterday"
+#: GTG/core/firstrun_tasks.py:11
+msgid ""
+"Once a task is done, you can push the &quot;Mark as done&quot; button. If "
+"the task is not relevant any-more, simply press &quot;Dismiss&quot;."
 msgstr ""
 
-#: GTG/taskeditor/editor.py:220
-#, python-format
-msgid "Was %s days ago"
+#: GTG/core/firstrun_tasks.py:13
+msgid ""
+"A task might be composed of multiple subtasks that appear as links in the "
+"description. Simply click on the following link :"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:1
-msgid "<span weight=\"bold\">Due for</span>"
+#: GTG/core/firstrun_tasks.py:17
+msgid "Don't forget to mark this subtask as done !"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:2
-msgid "<span weight=\"bold\">Starting on</span>"
+#: GTG/core/firstrun_tasks.py:19
+msgid "Other stuff you should read :"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:3 GTG/taskbrowser/taskbrowser.glade.h:12
-msgid "Delete"
+#: GTG/core/firstrun_tasks.py:25
+msgid ""
+"We hope that you will appreciate GTG. Please send us bug reports and ideas "
+"for improvement using : "
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:4 GTG/taskbrowser/__init__.py:33
-#: GTG/taskbrowser/taskbrowser.glade.h:13
+#: GTG/core/firstrun_tasks.py:28
+msgid "Thank you for trying out GTG :-)"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:33
+msgid "Learn to use subtasks"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:34
+msgid ""
+"In the task description (this window), if you begin a line with &quot;-"
+"&quot;, it will be considered as a &quot;subtask&quot;, something that needs "
+"to be done in order to accomplish your task. Just try to write &quot;- test "
+"subtask&quot; on the next line and press enter."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:36
+msgid "You can also use the &quot;insert subtask&quot; button."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:38
+msgid "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:40
+msgid ""
+"Some concept come with subtasks : for example, a subtask due date can never "
+"be after its parent due date."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:42
+msgid "Also, marking a parent as done will mark all the subtasks as done."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:47
+msgid "Learn to use tags"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:48
+msgid "A tag is a simple word that begin with &quot;@&quot;."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:50
+msgid "Try to type a word beginning with @ here :"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:52
+msgid "It becomes yellow, it's a tag."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:54
+msgid ""
+"Tags are useful to sort your tasks. In the view menu, you can enable a "
+"sidebar which displays all the tags you are using so you can easily see "
+"tasks for a given tag. There's no limit to the number of tags a task can "
+"have."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:56
+msgid ""
+"If you right click on a tag in the sidebar you can also set its color. It "
+"will permit you to have a more colorful list of tasks, if you want it that "
+"way."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:58
+msgid ""
+"A new tag is only added to the current task. There's no recursivity and the "
+"tag is not applied to subtasks. But when you create a new subtask, this "
+"subtask will inherit the tags of its parent as a good primary default (it "
+"will also be the case if you add a tag to a parent just after creating a "
+"subtask). Of course, you can modify at any time the tags of this particular "
+"subtask. It will never be changed by the parent."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:63
+msgid "Using the Workview"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:64
+msgid ""
+"If you press the &quot;Workview&quot; button, only actionable tasks will be "
+"displayed."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:66
+msgid "What is an actionable task? It's a task you can do directly, right now."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:68
+msgid ""
+"It's a task that is already &quot;start-able&quot;, i.e. the start date is "
+"already over."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:70
+msgid ""
+"It's a task that doesn't have open subtasks, i.e. you can do the task itself "
+"directly."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:72
+msgid "Thus, the workview will only show you tasks you should do right now."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:74
+msgid ""
+"If you use tags, you can right click on a tag in the sidebar and choose to "
+"not display tasks with this particular tag in the workview. It's very useful "
+"if you have a tag like &quot;someday&quot; that you use for tasks you would "
+"like to do but are not particularly urgent."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:80
+msgid "Reporting bugs"
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:81
+msgid ""
+"GTG is still very alpha software. We like it and use it everyday but you "
+"will encounter some bugs."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:83
+msgid ""
+"Please, report them ! We need you to make this software better. Any "
+"contribution, any idea is welcome."
+msgstr ""
+
+#: GTG/core/firstrun_tasks.py:85
+msgid ""
+"If you have some trouble with GTG, we might be able to help you or to solve "
+"your problem really quickly."
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:29
+msgid "Mark as done"
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:30
+msgid "Mark the selected task as done"
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:31
+msgid "Mark as not done"
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:32 GTG/taskbrowser/__init__.py:36
+msgid "Mark the selected task as to be done"
+msgstr ""
+
+#: GTG/taskbrowser/__init__.py:33 GTG/taskbrowser/taskbrowser.glade.h:13
+#: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Dismiss"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:5
-msgid "Insert subtask"
+#: GTG/taskbrowser/__init__.py:34
+msgid "Mark the task as not to be done anymore"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:6
-msgid "Insert tag"
+#: GTG/taskbrowser/__init__.py:35
+msgid "Undismiss"
 msgstr ""
 
-#: GTG/taskeditor/taskeditor.glade.h:7
-msgid "Keep as Note"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:8
-msgid "Mark Done"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:9
-msgid "Task"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:10
-msgid "gtk-clear"
-msgstr ""
-
-#: GTG/taskeditor/taskeditor.glade.h:11
-msgid "gtk-close"
+#: GTG/taskbrowser/__init__.py:37
+msgid "Permanently remove the selected task"
 msgstr ""
 
 #: GTG/taskbrowser/browser.py:109
@@ -184,34 +326,6 @@ msgstr ""
 msgid "Notes"
 msgstr ""
 
-#: GTG/taskbrowser/__init__.py:29
-msgid "Mark as done"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:30
-msgid "Mark the selected task as done"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:31
-msgid "Mark as not done"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:32 GTG/taskbrowser/__init__.py:36
-msgid "Mark the selected task as to be done"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:34
-msgid "Mark the task as not to be done anymore"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:35
-msgid "Undismiss"
-msgstr ""
-
-#: GTG/taskbrowser/__init__.py:37
-msgid "Permanently remove the selected task"
-msgstr ""
-
 #: GTG/taskbrowser/taskbrowser.glade.h:1
 msgid ""
 "\n"
@@ -244,6 +358,10 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:11
 msgid "D_ismiss"
+msgstr ""
+
+#: GTG/taskbrowser/taskbrowser.glade.h:12 GTG/taskeditor/taskeditor.glade.h:3
+msgid "Delete"
 msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:14
@@ -423,178 +541,60 @@ msgstr ""
 msgid "gtk-undo"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:6
-msgid "Getting started with GTG"
+#: GTG/taskeditor/editor.py:212
+msgid "Due tomorrow !"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:7
-msgid "Welcome in Getting Things Gnome!, your new task manager."
+#: GTG/taskeditor/editor.py:214
+#, python-format
+msgid "%s days left"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:9
-msgid ""
-"In GTG, everything is a task. From building a bridge over the Pacific Ocean "
-"to changing a light bulb or organizing a party. When you edit a task, it is "
-"automatically saved."
+#: GTG/taskeditor/editor.py:216
+msgid "Due today !"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:11
-msgid ""
-"Once a task is done, you can push the &quot;Mark as done&quot; button. If "
-"the task is not relevant any-more, simply press &quot;Dismiss&quot;."
+#: GTG/taskeditor/editor.py:218
+msgid "Due for yesterday"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:13
-msgid ""
-"A task might be composed of multiple subtasks that appear as links in the "
-"description. Simply click on the following link :"
+#: GTG/taskeditor/editor.py:220
+#, python-format
+msgid "Was %s days ago"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:17
-msgid "Don't forget to mark this subtask as done !"
+#: GTG/taskeditor/taskeditor.glade.h:1
+msgid "<span weight=\"bold\">Due for</span>"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:19
-msgid "Other stuff you should read :"
+#: GTG/taskeditor/taskeditor.glade.h:2
+msgid "<span weight=\"bold\">Starting on</span>"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:25
-msgid ""
-"We hope that you will appreciate GTG. Please send us bug reports and ideas "
-"for improvement using : "
+#: GTG/taskeditor/taskeditor.glade.h:5
+msgid "Insert subtask"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:28
-msgid "Thank you for trying out GTG :-)"
+#: GTG/taskeditor/taskeditor.glade.h:6
+msgid "Insert tag"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:33
-msgid "Learn to use subtasks"
+#: GTG/taskeditor/taskeditor.glade.h:7
+msgid "Keep as Note"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:34
-msgid ""
-"In the task description (this window), if you begin a line with &quot;-"
-"&quot;, it will be considered as a &quot;subtask&quot;, something that needs "
-"to be done in order to accomplish your task. Just try to write &quot;- test "
-"subtask&quot; on the next line and press enter."
+#: GTG/taskeditor/taskeditor.glade.h:8
+msgid "Mark Done"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:36
-msgid "You can also use the &quot;insert subtask&quot; button."
+#: GTG/taskeditor/taskeditor.glade.h:9
+msgid "Task"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:38
-msgid "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
+#: GTG/taskeditor/taskeditor.glade.h:10
+msgid "gtk-clear"
 msgstr ""
 
-#: GTG/core/firstrun_tasks.py:40
-msgid ""
-"Some concept come with subtasks : for example, a subtask due date can never "
-"be after its parent due date."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:42
-msgid "Also, marking a parent as done will mark all the subtasks as done."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:47
-msgid "Learn to use tags"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:48
-msgid "A tag is a simple word that begin with &quot;@&quot;."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:50
-msgid "Try to type a word beginning with @ here :"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:52
-msgid "It becomes yellow, it's a tag."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:54
-msgid ""
-"Tags are useful to sort your tasks. In the view menu, you can enable a "
-"sidebar which displays all the tags you are using so you can easily see "
-"tasks for a given tag. There's no limit to the number of tags a task can "
-"have."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:56
-msgid ""
-"If you right click on a tag in the sidebar you can also set its color. It "
-"will permit you to have a more colorful list of tasks, if you want it that "
-"way."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:58
-msgid ""
-"A new tag is only added to the current task. There's no recursivity and the "
-"tag is not applied to subtasks. But when you create a new subtask, this "
-"subtask will inherit the tags of its parent as a good primary default (it "
-"will also be the case if you add a tag to a parent just after creating a "
-"subtask). Of course, you can modify at any time the tags of this particular "
-"subtask. It will never be changed by the parent."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:63
-msgid "Using the Workview"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:64
-msgid ""
-"If you press the &quot;Workview&quot; button, only actionable tasks will be "
-"displayed."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:66
-msgid "What is an actionable task? It's a task you can do directly, right now."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:68
-msgid ""
-"It's a task that is already &quot;start-able&quot;, i.e. the start date is "
-"already over."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:70
-msgid ""
-"It's a task that doesn't have open subtasks, i.e. you can do the task itself "
-"directly."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:72
-msgid "Thus, the workview will only show you tasks you should do right now."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:74
-msgid ""
-"If you use tags, you can right click on a tag in the sidebar and choose to "
-"not display tasks with this particular tag in the workview. It's very useful "
-"if you have a tag like &quot;someday&quot; that you use for tasks you would "
-"like to do but are not particularly urgent."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:80
-msgid "Reporting bugs"
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:81
-msgid ""
-"GTG is still very alpha software. We like it and use it everyday but you "
-"will encounter some bugs."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:83
-msgid ""
-"Please, report them ! We need you to make this software better. Any "
-"contribution, any idea is welcome."
-msgstr ""
-
-#: GTG/core/firstrun_tasks.py:85
-msgid ""
-"If you have some trouble with GTG, we might be able to help you or to solve "
-"your problem really quickly."
+#: GTG/taskeditor/taskeditor.glade.h:11
+msgid "gtk-close"
 msgstr ""
