--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-	* Add Ctrl-W accelerator to close a task by Patrick Coleman
+	* Fixed #406851, incorrect behaviour marking a dismissed task as done
+	* Added accelerators to the task editor
     * When GTG is already running, use DBUS to raise existing instance rather than failing silently
     * Refactorization and PEP8ification work by Jonathan Lange
     * New keyboard bindings for 'Mark as done' and 'Dismiss' actions
