--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ For current:
 * Kevin Mehall <km@kevinmehall.net>
 * Paulo Cabido <paulo.cabido@gmail.com>
 * Patrick Coleman <blinken@gmail.com>
+* Luca Invernizzi <invernizzi.l@gmail.com>
