--- a/AUTHORS
+++ b/AUTHORS
@@ -37,3 +37,4 @@ For current:
 * Paulo Cabido <paulo.cabido@gmail.com>
 * Patrick Coleman <blinken@gmail.com>
 * Luca Invernizzi <invernizzi.l@gmail.com>
+* Mikkel Kjær Jensen <kjmikkel@gmail.com>
