--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+    * Deleting a task will also delete all subtasks
     * Merge RTM plugin branch from Luca Invernizzi
     * i18n: fixed window title in GTG/taskbrowser/browser.py, by Dario Bertini 
     * Patch from Luca Invernizzi to add XDG_CACHE redefinition in script/debug.sh
