--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+    * Patch from mrk to improve compatibility with non GNU systems
+    * Close date selector widget on single click
     * Empty new tasks are deleted when editor is closed
     * lot of bug fixed in the editor while playing with subtasks
     * Works well with the "text besides icon" GNOME option
