--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+    * Remove the "File" menu. We have no files, we have tasks!    
     * Patch from mrk to improve compatibility with non GNU systems
     * Close date selector widget on single click
     * Empty new tasks are deleted when editor is closed
