--- a/locales/gtg.pot
+++ b/locales/gtg.pot
@@ -1,8 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -13,8 +8,10 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2009-12-02 23:40+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/plugins/rtm_sync/rtm_sync.py:67 GTG/plugins/rtm_sync/rtm_sync.py:73
 msgid "Synchronize with RTM"
@@ -187,7 +184,8 @@ msgid "Insert the title of the tomboy note "
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:82
-msgid "Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
+msgid ""
+"Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:125
@@ -303,7 +301,8 @@ msgid "You can also use the &quot;insert subtask&quot; button."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:41
-msgid "Task and subtasks can be re-organized by drag-n-drop in the tasks list."
+msgid ""
+"Task and subtasks can be re-organized by drag-n-drop in the tasks list."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:43
@@ -368,7 +367,8 @@ msgid ""
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:69
-msgid "What is an actionable task? It's a task you can do directly, right now."
+msgid ""
+"What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:71
@@ -572,8 +572,8 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
-"<span weight=\"bold\" size=\"large\">Are you sure you want delete this task?"
-"</span>\n"
+"<span weight=\"bold\" size=\"large\">Are you sure you want delete this "
+"task?</span>\n"
 "\n"
 "Deleting a task cannot be undone, and will delete the following tasks: "
 msgstr ""
