--- a/CHANGELOG
+++ b/CHANGELOG
@@ -33,6 +33,7 @@
     * Fix a spelling mistake in the manpage by Jonathan Lange
     * Allow quickadd of capitalized date by remy@frerebeau.org 
     * Added tomboy plugin by Luca Invernizzi
+    * Added export function with templates by Luca Invernizzi
 
 2009-07-04 Getting Things GNOME! 0.1.2
     * Available in 18 languages, with 12 languages being more than 99% translated
