--- a/AUTHORS
+++ b/AUTHORS
@@ -16,7 +16,7 @@ For 0.1.1:
 * Antons Rebguns  <arebgun@gmail.com>
 * Carl Chenet <chaica@ohmytux.com>
 * Jérôme Guelfucci <jerome.guelfucci@gmail.com>
-* Luca Falavigna <dktrkranz@debian.org>
+* Luca Falavigna <dktrkranz@ubuntu.com>
 * Kalle Persson <kalle@kallepersson.se>
 * Jonathan Barnoud <jonathan@barnoud.net>
 
@@ -37,5 +37,3 @@ For current:
 * Paulo Cabido <paulo.cabido@gmail.com>
 * Patrick Coleman <blinken@gmail.com>
 * Luca Invernizzi <invernizzi.l@gmail.com>
-* Mikkel Kjær Jensen <kjmikkel@gmail.com>
-* Henning Eggers <henning@ubuntu.com>
