--- a/doc/gtg.1
+++ b/doc/gtg.1
@@ -12,7 +12,7 @@ GTG uses a very handy system for creating and editing tasks. The task editor
 can automatically recognize metadata such as tags and subtasks only by the use
 of a very simple syntax.
 .SH COPYRIGHT
-This manual page is Copyright 2009 Luca Falavigna <dktrkranz@debian.org>.
+This manual page is Copyright 2009 Luca Falavigna <dktrkranz@ubuntu.com>.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU General Public License, Version 3 or any later
 version published by the Free Software Foundation.
