--- a/locales/gtg-da.po
+++ b/locales/gtg-da.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-09 16:32+0100\n"
-"PO-Revision-Date: 2009-12-09 07:57+0000\n"
+"PO-Revision-Date: 2009-12-10 18:21+0000\n"
 "Last-Translator: Aputsiaq Janussen <aj@isit.gl>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-12-09 22:08+0000\n"
+"X-Launchpad-Export-Date: 2009-12-12 14:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskbrowser/__init__.py:32 GTG/taskeditor/__init__.py:28
@@ -137,6 +137,19 @@ msgid ""
 "Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things Gnome! er fri software; du kan redistribuere den og/eller "
+"ændre den under betingelserne i GNU General Public License som udgivet af "
+"Free Software Foundation; enten version 3 af licensen,  eller (efter dit "
+"valg) enhver senere version.\n"
+"\n"
+"Getting Things Gnome! er udgivet med håbet om at det kan være nyttigt, men "
+"UDEN ENHVER GARANTI; selv uden den medfølgende garanti for SALGBARHED eller "
+"EGNETHED TIL ET BESTEMT FORMÅL.  Se GNU General Public License for flere "
+"detaljer.\n"
+"\n"
+"You should have received a copy of the GNU General Public License along with "
+"Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
+"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: GTG/taskbrowser/taskbrowser.glade.h:22
 msgid "Mark as Done"
@@ -318,7 +331,7 @@ msgstr "mærkater"
 
 #: GTG/taskbrowser/browser.py:1201
 msgid "tag"
-msgstr ""
+msgstr "mærkat"
 
 #: GTG/taskbrowser/browser.py:1207
 msgid "defer"
