--- a/locales/gtg-en_GB.po
+++ b/locales/gtg-en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-09 16:32+0100\n"
-"PO-Revision-Date: 2009-12-07 11:59+0000\n"
-"Last-Translator: Luca Invernizzi <invernizzi.l@gmail.com>\n"
+"PO-Revision-Date: 2009-12-11 09:32+0000\n"
+"Last-Translator: Lionel Dricot <ploum@ploum.net>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-12-09 22:08+0000\n"
+"X-Launchpad-Export-Date: 2009-12-12 14:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskbrowser/__init__.py:32 GTG/taskeditor/__init__.py:28
@@ -332,7 +332,7 @@ msgstr "tags"
 
 #: GTG/taskbrowser/browser.py:1201
 msgid "tag"
-msgstr ""
+msgstr "tag"
 
 #: GTG/taskbrowser/browser.py:1207
 msgid "defer"
