--- a/locales/gtg-zh_CN.po
+++ b/locales/gtg-zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-12-09 16:32+0100\n"
-"PO-Revision-Date: 2009-12-09 10:46+0000\n"
+"PO-Revision-Date: 2009-12-11 08:48+0000\n"
 "Last-Translator: Heling Yao <Unknown>\n"
 "Language-Team: Simplified Chinese <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-12-09 22:08+0000\n"
+"X-Launchpad-Export-Date: 2009-12-12 14:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskbrowser/__init__.py:32 GTG/taskeditor/__init__.py:28
@@ -328,7 +328,7 @@ msgstr "标签"
 
 #: GTG/taskbrowser/browser.py:1201
 msgid "tag"
-msgstr ""
+msgstr "标签"
 
 #: GTG/taskbrowser/browser.py:1207
 msgid "defer"
@@ -520,7 +520,7 @@ msgstr "使用网络"
 
 #: GTG/plugins/export/export.py:191
 msgid "Template not found"
-msgstr ""
+msgstr "没找到模板"
 
 #: GTG/plugins/export/export.py:192
 msgid "Can't load the template file"
@@ -593,7 +593,7 @@ msgstr "载入插件时出现未知错误。"
 
 #: GTG/core/plugins/__init__.py:43
 msgid "Very helpful message, isn't it? Please report a bug."
-msgstr ""
+msgstr "是不是很有用的信息？ 请提交 bug 报告。"
 
 #: GTG/core/plugins/pluginmanager.glade.h:1
 msgid "<b>No Plugin Selected</b>"
@@ -654,6 +654,8 @@ msgid ""
 "closed tasks pane, hidden by default but you can easily enable it in the "
 "View menu."
 msgstr ""
+"看过上面的子任务后，把它标记为\"完成\"。如果您不想做这项任务，把它标记为\"忽略\"。\"完成\"和\"忽略\"的任务位于关闭的任务窗中，该窗口默认是"
+"隐藏的，可以在视图菜单下开启。"
 
 #: GTG/core/firstrun_tasks.py:20
 msgid ""
@@ -746,7 +748,7 @@ msgid ""
 "If you right click on a tag in the sidebar you can also set its color. It "
 "will allow you to have a more colorful list of tasks, if you want it that "
 "way."
-msgstr ""
+msgstr "在边栏中右键点击标签，可设置其颜色。您要是喜欢，就可以有个更多彩的任务列表。"
 
 #: GTG/core/firstrun_tasks.py:63
 msgid ""
