--- a/locales/gtg.pot
+++ b/locales/gtg.pot
@@ -1,8 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -13,8 +8,10 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2009-12-12 14:20+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskbrowser/__init__.py:32 GTG/taskeditor/__init__.py:28
 msgid "Mark as done"
@@ -73,8 +70,8 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid ""
-"<span weight=\"bold\" size=\"large\">Are you sure you want delete this task?"
-"</span>\n"
+"<span weight=\"bold\" size=\"large\">Are you sure you want delete this "
+"task?</span>\n"
 "\n"
 "Deleting a task cannot be undone, and will delete the following tasks: "
 msgstr ""
@@ -521,7 +518,8 @@ msgid "Insert the title of the tomboy note "
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:80
-msgid "Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
+msgid ""
+"Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:123
@@ -747,7 +745,8 @@ msgid ""
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:71
-msgid "What is an actionable task? It's a task you can do directly, right now."
+msgid ""
+"What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:73
