--- a/AUTHORS
+++ b/AUTHORS
@@ -44,3 +44,7 @@ For 0.2:
 * Kevin Mehall <km@kevinmehall.net>
 * Luca Invernizzi <invernizzi.l@gmail.com>
 * Luca Falavigna <dktrkranz@debian.org>
+
+For current:
+------------
+Matthew Rasmus <tareth.ml@gmail.com>
