--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+    * Temporary fix allowing to reset tag color by Matthew Rasmus
+
 2009-12-11 Getting THings GNOME! 0.2
     * Bugs fixes from 0.1.9
 
