--- a/locales/gtg.pot
+++ b/locales/gtg.pot
@@ -1,8 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -13,8 +8,10 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2010-01-17 23:32+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/plugins/rtm_sync/rtm_sync.py:83 GTG/plugins/rtm_sync/rtm_sync.py:89
 msgid "Synchronize with RTM"
@@ -191,7 +188,8 @@ msgid "Insert the title of the tomboy note "
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:80
-msgid "Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
+msgid ""
+"Tomboy not found. Please install it or disable the Tomboy plugin in GTG"
 msgstr ""
 
 #: GTG/plugins/tomboy/tomboy.py:125
@@ -429,7 +427,8 @@ msgid ""
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:71
-msgid "What is an actionable task? It's a task you can do directly, right now."
+msgid ""
+"What is an actionable task? It's a task you can do directly, right now."
 msgstr ""
 
 #: GTG/core/firstrun_tasks.py:73
