--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+    * Send task by mail plugin by Luca Invernizzi
     * Import_json plugin by Bryce Harrington
     * Improve RTM plugin (bug #520427): don't sync tasks from archived lists
     * Automatic cleanup of closed task, plugin by Luca Invernizzi
