--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2010-03-01 Getting Things GNOME! 0.2.2
     * Autostart on login, by Luca Invernizzi
     * Preferences dialog, by Paul Kishimoto
     * Send task by mail plugin by Luca Invernizzi
